# stock-market-forecasting

./: Makefile  pyproject.toml
docker/: Dockerfile  Dockerfile.jupyter
notebooks/: .~lock.inpc_202310SerieHist.xls#  notebook.ipynb
src/stock_prediction/: __main__.py  _utils.py  config.py  timeseries.py
src/stock_prediction/datasets/: __init__.py  _cost_m2.py  _ipp.py  _pib.py  _price_index.py  _tools.py
src/stock_prediction/submodule/assets/: submodule_file.txt
